--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>djandah</title> 
+    <title>djandah herman</title> 
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>djandah!</h1>
+    <h1>djandah herman!</h1>
     <h5>Lab3-5 Works!</h5>
   </body>
 </html>
